--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-gateway-javascript-client",
+  "name": "@minutemailer/api",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/minutemailer/api-gateway-javascript-client.git",
